--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ classifiers = [
 ]
 dependencies = [
   "beaker_kernel~=1.9.0",
+  "folium~=0.19.4",
+  "seaborn~=0.13.2",
+  "plotly~=6.0.0", 
+  "matplotlib~=3.10.0",
 ]
 
 [project.urls]
