--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "beaker_kernel>=1.9.2b1",
-  "archytas>=1.3.14b1",
+  "beaker_kernel @ file:///{root}/beaker_kernel-1.9.2b1-py3-none-any.whl",
+  "archytas @ file:///{root}/archytas-1.3.14b1-py3-none-any.whl",
   "folium~=0.19.4",
   "seaborn~=0.13.2",
   "plotly~=6.0.0", 
@@ -39,7 +39,12 @@ dependencies = [
   "geopandas",
   "spatialpandas",
   "bokeh",
+  "rioxarray",
+  "gdal==3.6.2"
 ]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [project.urls]
 Documentation = "https://github.com/Brandon Rose/beaker-fire#readme"
